--- a/samples/photo-album/environment.yml
+++ b/samples/photo-album/environment.yml
@@ -3,7 +3,8 @@ dependencies:
 - python=3.9
 - pip=21
 - pip:
-    - flask==3.0.0
+    - Werkzeug==2.2.2
+    - flask==2.2.2
     - pathlib2>=2.3.7
     - boto3>=1.26
     - opencv-python>=4.7.0.72
